--- a/src/pages/profile/Profile.module.scss
+++ b/src/pages/profile/Profile.module.scss
@@ -128,37 +128,50 @@
       }
     }
 
-    form {
+    .box {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 20px;
       margin-bottom: 100px;
 
-      input {
-        padding: 10px 10px 10px 20px;
-        background: #ffffff;
-        border: 1px solid #454545;
-        border-radius: 10px;
-        outline: none;
-        font-weight: 500;
-        font-size: 16px;
-
-        &::placeholder {
-          color: rgba(69, 69, 69, 0.5);
-        }
-      }
-
-      button {
-        width: 200px;
-        margin: 0 auto;
-        border: 0;
+      .btn {
         background: #ff8181;
         color: #fff;
-        height: 40px;
-        border-radius: 20px;
-        font-size: 16px;
+        height: 50px;
       }
     }
+
+    // form {
+    //   display: flex;
+    //   flex-direction: column;
+    //   gap: 10px;
+    //   margin-bottom: 100px;
+
+    //   input {
+    //     padding: 10px 10px 10px 20px;
+    //     background: #ffffff;
+    //     border: 1px solid #454545;
+    //     border-radius: 10px;
+    //     outline: none;
+    //     font-weight: 500;
+    //     font-size: 16px;
+
+    //     &::placeholder {
+    //       color: rgba(69, 69, 69, 0.5);
+    //     }
+    //   }
+
+    //   button {
+    //     width: 200px;
+    //     margin: 0 auto;
+    //     border: 0;
+    //     background: #ff8181;
+    //     color: #fff;
+    //     height: 40px;
+    //     border-radius: 20px;
+    //     font-size: 16px;
+    //   }
+    // }
   }
 }
 
