--- a/src/pages/entries/Entries.module.scss
+++ b/src/pages/entries/Entries.module.scss
@@ -170,17 +170,21 @@
         padding: 10px 70px;
         background: #ff8181;
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-end;
+        height: 60px;
 
         button {
           border: 0;
           border-radius: 50px;
-          width: 200px;
           font-size: 16px;
-          color: #333;
-          background: rgba($color: #fff, $alpha: 1);
-          box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
+          color: #fff;
+          background: rgba($color: #fff, $alpha: 0);
+          // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
           transition: all 0.2s ease-in-out;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 30px;
 
           &:hover {
             transform: scale(1.05);
@@ -216,6 +220,14 @@
         margin-top: 10px;
         display: flex;
         gap: 20px;
+        display: flex;
+        justify-content: center;
+
+        .btns {
+          background: #ff8181;
+          padding: 2px;
+          border-radius: 50px;
+        }
 
         button {
           width: 150px;
@@ -223,12 +235,11 @@
           border: 0;
           border-radius: 55px;
           background-color: transparent;
-          background: #ff8181;
+
           color: #fff;
           // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.08);
 
           // border-bottom: 2px solid #333;
-          opacity: 0.3;
           font-weight: 400;
           font-size: 20px;
           line-height: 24px;
@@ -241,7 +252,8 @@
         }
 
         .active_nav {
-          opacity: 1;
+          background: #fff;
+          color: #000;
         }
       }
 
