--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -2,14 +2,15 @@
   background: #fff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding: 0 20px;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.1);
   position: relative;
   z-index: 2;
 
   .user {
+    margin-top: calc(50vh - 100px);
     display: flex;
     align-items: center;
     background: #ff8181;
