--- a/src/pages/entries/Entries.module.scss
+++ b/src/pages/entries/Entries.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 300px 1fr;
+  overflow: hidden;
 
   .modalCreateEntries {
     position: fixed;
@@ -161,6 +162,7 @@
     background: #f8fbff;
     height: 100vh;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
+    overflow: auto;
 
     .entries {
       position: relative;
