--- a/src/pages/access/Access.module.scss
+++ b/src/pages/access/Access.module.scss
@@ -24,7 +24,7 @@
       line-height: 29px;
       text-align: center;
       letter-spacing: 0.03em;
-
+      cursor: pointer;
       color: #454545;
     }
 
@@ -61,6 +61,7 @@
 
     p {
       margin: 50px 0;
+      cursor: pointer;
     }
 
     label {
