--- a/src/pages/access/Settings.module.scss
+++ b/src/pages/access/Settings.module.scss
@@ -1,12 +1,26 @@
 .container {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  background: #f8fbff;
+
+  height: 100vh;
+  overflow: hidden;
+}
+
+.mobile_container {
+  display: none;
   background: #f3f8ff;
-  min-height: calc(100vh - 50px);
+  height: calc(100vh - 50px);
 }
 
 .content {
   height: 100%;
   padding: 0 30px;
   display: flex;
+
+  @media (max-width: 700px) {
+    overflow: auto;
+  }
 
   .info {
     padding-bottom: 100px;
@@ -74,5 +88,15 @@
         font-size: 12px;
       }
     }
+  }
+}
+
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
+  .mobile_container {
+    display: block;
+    background-color: #f8fbff;
   }
 }
