--- a/src/pages/entries/Entries.module.scss
+++ b/src/pages/entries/Entries.module.scss
@@ -278,6 +278,7 @@
           flex-direction: column;
           justify-content: space-between;
           transition: all 0.2s ease-in-out;
+          background: #fff;
 
           &:hover {
             box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
