--- a/src/pages/profile/Profile.module.scss
+++ b/src/pages/profile/Profile.module.scss
@@ -85,6 +85,7 @@
               border-radius: 5px;
               font-size: 20px;
               transition: opacity 0.2s ease-in-out;
+              transform: translateX(52%);
 
               &:hover {
                 opacity: 0.8;
