--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -2,16 +2,178 @@
   display: grid;
   grid-template-columns: 300px 1fr;
   background: #f3f8ff;
+  height: 100vh;
+  overflow: hidden;
 
   @media (max-width: 500px) {
     display: none;
   }
+
+  .content {
+    overflow: auto;
+
+    .nav {
+      background: #ff8181;
+      padding: 10px;
+
+      .search {
+        display: flex;
+        align-items: center;
+        background: #fff;
+        width: calc(100% - 500px);
+        border-radius: 50px;
+        margin: 0 auto;
+
+        .icon {
+          margin: 10px;
+          font-size: 25px;
+          cursor: pointer;
+        }
+
+        input {
+          background: transparent;
+          border: none;
+          width: 100%;
+          font-size: 20px;
+          outline: none;
+        }
+      }
+
+      .bottom_nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 300px;
+        margin-top: 20px;
+
+        h6 {
+          color: #fff;
+          font-weight: normal;
+          font-size: 20px;
+          opacity: 0.5;
+          cursor: pointer;
+        }
+
+        .active {
+          opacity: 1;
+        }
+      }
+    }
+
+    .result_search {
+      .items {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+
+        .item {
+          width: 800px;
+          border-bottom: 2px solid #000;
+
+          padding: 20px;
+
+          .stars {
+            display: flex;
+            justify-content: center;
+            font-size: 30px;
+            gap: 20px;
+            margin-bottom: 10px;
+            color: gold;
+          }
+
+          .info {
+            display: flex;
+            gap: 50px;
+            align-items: center;
+
+            img {
+              width: 120px;
+              height: 120px;
+            }
+
+            td {
+              padding-right: 20px;
+              font-size: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .mobile_container {
+  background: #f3f8ff;
+  min-height: calc(100vh - 50px);
   display: none;
 
   @media (max-width: 500px) {
     display: block;
+  }
+
+  .content {
+    .nav {
+      background: #ff8181;
+
+      .bottom_nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 50px;
+        // margin-top: 20px;
+
+        h6 {
+          color: #fff;
+          font-weight: normal;
+          font-size: 16px;
+          opacity: 0.5;
+          cursor: pointer;
+        }
+
+        .active {
+          opacity: 1;
+        }
+      }
+    }
+
+    .result_search {
+      .items {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+
+        .item {
+          width: calc(100% - 10px);
+          border-bottom: 2px solid #000;
+
+          .stars {
+            display: flex;
+            justify-content: center;
+            font-size: 30px;
+            gap: 20px;
+            margin-bottom: 10px;
+            color: gold;
+          }
+
+          .info {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+
+            img {
+              width: 65px;
+              height: 65px;
+            }
+
+            td {
+              padding-right: 16px;
+              font-size: 16px;
+            }
+          }
+        }
+      }
+    }
   }
 }
