--- a/src/pages/questionnaire/Questionnaire.module.scss
+++ b/src/pages/questionnaire/Questionnaire.module.scss
@@ -64,8 +64,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    border-bottom: 1px solid #b0b0b0;
-    padding: 20px 20px;
+    border-bottom: 1px solid #000;
+    padding: 20px 0;
+    margin: 0 20px;
 
     .title {
       display: flex;
