--- a/src/Components/FooterMobile/FooterMobile.module.scss
+++ b/src/Components/FooterMobile/FooterMobile.module.scss
@@ -6,7 +6,7 @@
   height: 71px;
   display: flex;
   align-items: flex-end;
-  background-color: #f8fbff;
+  // background-color: #f8fbff;
 }
 
 .links_container {
