--- a/src/Components/FooterMobile/FooterMobile.module.scss
+++ b/src/Components/FooterMobile/FooterMobile.module.scss
@@ -7,11 +7,12 @@
   display: flex;
   align-items: flex-end;
   // background-color: #f8fbff;
+  z-index: 2;
 }
 
 .links_container {
   display: flex;
-  width: 80%;
+  width: 85%;
   justify-content: space-around;
   background-color: white;
   align-items: center;
