--- a/src/pages/profile/Profile.module.scss
+++ b/src/pages/profile/Profile.module.scss
@@ -39,6 +39,7 @@
           background: #fff;
           border-radius: 75px;
           padding: 20px;
+          border: 1px solid rgba(0, 0, 0, 0.23);
 
           .user_img {
             width: 250px;
