--- a/src/Components/ClinicPage/Desktop/Desktop.module.scss
+++ b/src/Components/ClinicPage/Desktop/Desktop.module.scss
@@ -47,7 +47,7 @@
           cursor: default;
 
           p {
-            font-size: 16px;
+            font-size: 20px;
             text-align: center;
             cursor: pointer;
           }
@@ -62,7 +62,7 @@
       margin: 0 100px;
       border-radius: 50px;
       margin-top: 50px;
-      font-size: 20px;
+      font-size: 25px;
 
       button {
         font-size: 20px;
@@ -71,6 +71,7 @@
       .imgImage {
         width: 150px;
         height: 150px;
+        transform: translateY(15%);
       }
     }
 
