--- a/src/pages/questionnaire/Questionnaire.module.scss
+++ b/src/pages/questionnaire/Questionnaire.module.scss
@@ -88,6 +88,7 @@
       height: 53px;
       display: flex;
       align-items: center;
+      border: 1px solid rgba($color: #000000, $alpha: 0.23);
 
       .date {
         width: 40px;
