--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -69,7 +69,10 @@
 
         .item {
           width: 800px;
-          border-bottom: 2px solid #000;
+          border: 1px solid rgba($color: #000000, $alpha: 0.23);
+          border-radius: 50px;
+          margin-top: 20px;
+          background: #fff;
 
           padding: 20px;
 
@@ -86,10 +89,12 @@
             display: flex;
             gap: 50px;
             align-items: center;
+            margin-bottom: 20px;
 
             img {
               width: 120px;
               height: 120px;
+              transform: translateY(-10px);
             }
 
             td {
