--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -151,7 +151,9 @@
 
         .item {
           width: calc(100% - 10px);
-          border-bottom: 2px solid #000;
+          border: 1px solid rgba($color: #000000, $alpha: 0.23);
+          border-radius: 50px;
+          padding: 10px;
 
           .stars {
             display: flex;
@@ -170,6 +172,7 @@
             img {
               width: 65px;
               height: 65px;
+              transform: translateY(-10px);
             }
 
             td {
