--- a/src/Components/CenterPage/Desktop/Desktop.module.scss
+++ b/src/Components/CenterPage/Desktop/Desktop.module.scss
@@ -64,7 +64,8 @@
       border-radius: 50px;
       margin-top: 50px;
       font-size: 20px;
-
+      border: 1px solid rgba($color: #000000, $alpha: 0.23);
+      
       button {
         font-size: 20px;
       }
