--- a/src/pages/search/Search.module.scss
+++ b/src/pages/search/Search.module.scss
@@ -148,6 +148,8 @@
         flex-direction: column;
         gap: 20px;
         align-items: center;
+        margin-top: 20px;
+        padding-bottom: 100px;
 
         .item {
           width: calc(100% - 10px);
@@ -172,7 +174,7 @@
             img {
               width: 65px;
               height: 65px;
-              transform: translateY(-10px);
+              transform: translateY(-15px);
             }
 
             td {
