--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
     background: #ff8181;
     border-radius: 50px;
     padding: 5px;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     cursor: pointer;
 
     &_img {
@@ -34,10 +34,24 @@
     }
   }
 
+  .id {
+    background: #ff8181;
+    border-radius: 50px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    font-size: 20px;
+    color: #fff;
+    margin-top: 30px;
+  }
+
   .links {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    margin-top: 30px;
 
     a {
       color: #000;
