--- a/src/pages/map/Map.module.scss
+++ b/src/pages/map/Map.module.scss
@@ -8,6 +8,47 @@
   display: grid;
   grid-template-columns: 300px 1fr;
   background: #f8fbff;
+
+  .select {
+    width: 400px;
+  }
+
+  .select2 {
+    margin-top: 20px;
+  }
+
+  .info_center {
+    position: fixed;
+    width: 400px;
+    // height: 400px;
+    top: calc(50vh - 200px);
+    right: calc(50vw - 200px);
+    z-index: 1000;
+    background: #fff;
+    border-radius: 15px;
+    border: 1px solid rgba($color: #000000, $alpha: 0.2);
+    padding: 20px;
+
+    .close {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      cursor: pointer;
+      font-size: 30px;
+    }
+
+    .table {
+      margin: 20px 0;
+
+      tbody {
+        tr {
+          td {
+            padding-right: 10px;
+          }
+        }
+      }
+    }
+  }
 }
 
 .cont {
