--- a/src/pages/map/Map.module.scss
+++ b/src/pages/map/Map.module.scss
@@ -10,11 +10,11 @@
   background: #f8fbff;
 
   .select {
-    width: 400px;
-  }
+    width: 800px;
 
-  .select2 {
-    margin-top: 20px;
+    input {
+      height: 40px;
+    }
   }
 
   .info_center {
