--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -26,7 +26,7 @@
     }
 
     p {
-      margin-left: 40px;
+      margin: 0 auto;
       color: #fff;
       font-weight: 400;
       font-size: 24px;
