--- a/src/pages/settings/Settings.module.scss
+++ b/src/pages/settings/Settings.module.scss
@@ -6,6 +6,50 @@
   @media (max-width: 500px) {
     display: none;
   }
+
+  .content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .items {
+      display: grid;
+      grid-template-columns: 200px 200px 200px 200px;
+      grid-template-rows: 200px 200px;
+      gap: 20px;
+
+      .item {
+        background: #fff;
+        border-radius: 15px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        position: relative;
+        transition: all 0.2s ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+          transform: translateY(-10px);
+        }
+
+        .icon {
+          font-size: 70px;
+          transform: translateY(-20px);
+          color: green;
+        }
+
+        p {
+          position: absolute;
+          bottom: 20px;
+          padding: 10px;
+
+          text-align: center;
+        }
+      }
+    }
+  }
 }
 
 .mobile_container {
