--- a/src/Components/HeaderMobile/HeaderMobile.module.scss
+++ b/src/Components/HeaderMobile/HeaderMobile.module.scss
@@ -1,7 +1,11 @@
 .main_container {
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 100%;
+
+  @media (max-width: 700px) {
+    display: flex;
+  }
 }
 .mobile_profile_container {
   width: 200px;
