--- a/src/Components/Sidebar/Sidebar.module.scss
+++ b/src/Components/Sidebar/Sidebar.module.scss
@@ -9,6 +9,10 @@
   position: relative;
   z-index: 2;
 
+  @media (max-width: 700px) {
+    display: none;
+  }
+
   .user {
     margin-top: calc(50vh - 100px);
     display: flex;
