--- a/src/Components/FooterMobile/FooterMobile.module.scss
+++ b/src/Components/FooterMobile/FooterMobile.module.scss
@@ -1,13 +1,14 @@
 .mobile_footer_main_container {
-  width: 100%;
+  width: 100vw;
   position: fixed;
   bottom: 0;
   right: 0;
-  height: 71px;
+  // height: 71px;
   display: none;
-  align-items: flex-end;
+  // align-items: flex-end;
   // background-color: #f8fbff;
   z-index: 2;
+  box-shadow: 0px -4px 8px 0px rgba(34, 60, 80, 0.1);
 
   @media (max-width: 700px) {
     display: flex;
@@ -20,7 +21,7 @@
   justify-content: space-around;
   background-color: white;
   align-items: center;
-  height: 42px;
+  // height: 42px;
 }
 
 .home {
