--- a/src/pages/settings/Settings.module.scss
+++ b/src/pages/settings/Settings.module.scss
@@ -5,7 +5,7 @@
 
   @media (max-width: 700px) {
     display: block;
-    width: 100vw;
+    max-width: 100vw;
     padding-bottom: 40px;
     background: transparent;
   }
@@ -45,6 +45,7 @@
 
         @media (max-width: 700px) {
           justify-content: space-between;
+          flex-direction: row-reverse;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0);
           border-radius: 0;
           border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
