--- a/src/pages/register-center/RegisterCenter.module.scss
+++ b/src/pages/register-center/RegisterCenter.module.scss
@@ -36,7 +36,7 @@
       color: #fff;
       height: 40px;
       border-radius: 50px;
-      transform: translateX(calc(50%));
+      // transform: translateX(calc(50%));
     }
   }
 }
